2026-02-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Tweak
	warning diagnostic to describe the decision being taken and the
	reason for it.  Set `notFoundFont` scalar to 1 only if this
	diagnostic was unexpected because the `urwfontsupport` scalar
	didn't match "no".  This way we don't spray the (usually
	enormous) "path(s) used for searching" diagnostic for no
	apparent reason.

2026-02-03  Dariusz Chilimoniuk <darek@stack.pl>

	* tmac/hyphen.pl: New file adds Polish hyphenation patterns and
	exceptions.
	* tmac/pl.tmac: New file adds groff locale for Polish.
	* tmac/tmac.am: Add the foregoing files to the `TMACNORMALFILES`
	macro.
	* LICENSES: Add copyright and license notices from CTAN Polish
	hyphenation patterns.

	* src/roff/groff/test/initialization-is-quiet.sh: Verify lack of
	warnings when Polish l10n macro file is loaded (`-m pl`).
	* tmac/tests/e_ld-works.sh: Test Polish translation.
	* tmac/tests/localization-works.sh: Test Polish localization.

	* doc/groff.texi.in (ms language and localization)
	(Input Encodings, Manipulating Hyphenation):
	* doc/ms.ms.in (Language and localization):
	* man/groff_tmac.5.man (Localization packages):
	* tmac/groff_ms.7.man (Language and localization): Note
	availability of Polish localization.

2026-02-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Kill off `GROFF_GHOSTSCRIPT_AVAILABILITY_NOTICE`.

	* m4/groff.m4 (GROFF_GHOSTSCRIPT_AVAILABILITY_NOTICE): Delete.
	* configure.ac: Stop interpolating same.

	Completes (the revised) "action item D" from <https://\
	lists.gnu.org/archive/html/groff/2026-02/msg00004.html>.  I've
	abandoned "action item B".

2026-02-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Report gropdf service level in configuration summary.

	* m4/groff.m4 (GROFF_GROPDF_DEPENDENCIES_CHECK): Drop unused
	shell variables `use_gropdf` and `gropdf_missing_deps`.  Add new